Added jasny bootstrap

--- a/src/bootstrap.html
+++ b/src/bootstrap.html
@@ -4,6 +4,8 @@
 <div class="container">
 	<!-- build:include ../bower_components/bootstrap-html/src/plugins/plugins.html -->
 	<!-- /build -->
+	<!-- build:include ../bower_components/bootstrap-html/src/extras/extras.html -->
+	<!-- /build -->
 </div>
 
 
