--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -12,37 +12,6 @@
 
 	<div class="row">
 		<div class="col-sm-6">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<div class="panel-title">Users</div>
-				</div>
-				<ul class="list-group">
-					<li class="list-group-item">
-						<span class="badge">3</span>
-						Number of users:
-					</li>
-					<li class="list-group-item">
-						<span class="badge">3</span>
-						Number of administrators:
-					</li>
-					<li class="list-group-item">
-						<span class="badge">0</span>
-						Users registered within a week:
-					</li>
-				</ul>
-				<div class="list-group">
-					<a href="http://fuel.localhost/admin/auth/details/4" class="list-group-item">
-						<img width="40" src="https://secure.gravatar.com/avatar/0f67f71991c2b1cb1a08581d67708124?s=40&amp;d=http%3A%2F%2Ffuel.localhost%2Fassets%2Ftheme%2Fimg%2Ficons%2Fadmin.png" alt="" class="pull-left img-rounded">
-						<p class="list-group-item-text"> &nbsp; Latest user</p>
-						<h4 class="list-group-item-heading">
-							&nbsp; S&aacute;rk&ouml;zi Tibor
-						</h4>
-						<span class="clearfix"></span>
-					</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-sm-6">
 			<div class="panel panel-primary">
 				<div class="panel-heading">
 					<div class="panel-title">Users</div>
@@ -62,11 +31,11 @@
 					</li>
 				</ul>
 				<div class="list-group">
-					<a href="http://fuel.localhost/admin/auth/details/4" class="list-group-item">
-						<img width="40" src="https://secure.gravatar.com/avatar/0f67f71991c2b1cb1a08581d67708124?s=40&amp;d=http%3A%2F%2Ffuel.localhost%2Fassets%2Ftheme%2Fimg%2Ficons%2Fadmin.png" alt="" class="pull-left img-rounded">
+					<a href="" class="list-group-item">
+						<img width="40" src="https://secure.gravatar.com/avatar/0f67f71991c2b1cb1a08581d67708124?s=40&amp;d=mm" alt="" class="pull-left img-rounded">
 						<p class="list-group-item-text"> &nbsp; Latest user</p>
 						<h4 class="list-group-item-heading">
-							&nbsp; S&aacute;rk&ouml;zi Tibor
+							&nbsp; Latest User
 						</h4>
 						<span class="clearfix"></span>
 					</a>
